Reworked connection to Twitch, added jokes but only in Russian, added replacement of words, fixed bugs

--- a/SimpleTwitchTTS/App.config
+++ b/SimpleTwitchTTS/App.config
@@ -40,6 +40,27 @@
             <setting name="ProfileName" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ProgramLanguage" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SecondForm" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="TwitchToken" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="HighlightedMessageName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TtsMessageType" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AnecdotChatCommand" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AnecdotChannelPoints" serializeAs="String">
+                <value />
+            </setting>
         </SimpleTwitchTTS.Properties.Settings>
     </userSettings>
 </configuration>
