--- a/SimpleTwitchTTS/SimpleTwitchTTS.csproj
+++ b/SimpleTwitchTTS/SimpleTwitchTTS.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NHotkey.Wpf" Version="2.1.1" />
     <PackageReference Include="System.Speech" Version="7.0.0" />
     <PackageReference Include="TwitchLib" Version="3.5.3" />
   </ItemGroup>
