--- a/SimpleTwitchTTS/Properties/Settings.settings
+++ b/SimpleTwitchTTS/Properties/Settings.settings
@@ -35,5 +35,11 @@
     <Setting Name="ProfileName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ProgramLanguage" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Read" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
