fixed bugs with blacklist

--- a/SimpleTwitchTTS/App.config
+++ b/SimpleTwitchTTS/App.config
@@ -61,6 +61,12 @@
             <setting name="AnecdotChannelPoints" serializeAs="String">
                 <value />
             </setting>
+            <setting name="NeuroAnecdotCommand" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="NeuroAnecdotChannelPoints" serializeAs="String">
+                <value />
+            </setting>
         </SimpleTwitchTTS.Properties.Settings>
     </userSettings>
 </configuration>
