--- a/SimpleTwitchTTS/Properties/Settings.settings
+++ b/SimpleTwitchTTS/Properties/Settings.settings
@@ -59,5 +59,11 @@
     <Setting Name="AnecdotChannelPoints" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="NeuroAnecdotCommand" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="NeuroAnecdotChannelPoints" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
