changed interface, added timeot for user for TTS, fixed bugs, created new bugs

--- a/SimpleTwitchTTS/App.config
+++ b/SimpleTwitchTTS/App.config
@@ -67,6 +67,12 @@
             <setting name="NeuroAnecdotChannelPoints" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MutedForTimeChannelPointsName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MutedForTimeMinute" serializeAs="String">
+                <value>0</value>
+            </setting>
         </SimpleTwitchTTS.Properties.Settings>
     </userSettings>
 </configuration>
