--- a/SimpleTwitchTTS/Properties/Settings.settings
+++ b/SimpleTwitchTTS/Properties/Settings.settings
@@ -65,5 +65,11 @@
     <Setting Name="NeuroAnecdotChannelPoints" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MutedForTimeChannelPointsName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MutedForTimeMinute" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
