Bugifx, ui fix, added color help for saving/deleting profiles, now you can choose to not send anecdote in chat

--- a/SimpleTwitchTTS/App.config
+++ b/SimpleTwitchTTS/App.config
@@ -73,6 +73,9 @@
             <setting name="MutedForTimeMinute" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="AnecdotsDoNotSendInChat" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SimpleTwitchTTS.Properties.Settings>
     </userSettings>
 </configuration>
