--- a/SimpleTwitchTTS/Properties/Settings.settings
+++ b/SimpleTwitchTTS/Properties/Settings.settings
@@ -71,5 +71,8 @@
     <Setting Name="MutedForTimeMinute" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="AnecdotsDoNotSendInChat" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
